--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
                 <img src="./images/img2.jpg" alt="" class="about_image">
                 <div class="hidden_icons">
                     <div class="icon">
-                        <img src="/images/github1.png" alt="">
+                        <img src="./images/github1.png" alt="">
                     </div>
                     <div class="icon">
-                        <img src="/images/linkedin1.png" alt="">
+                        <img src="./images/linkedin1.png" alt="">
                     </div>
                     <div class="icon">
-                        <img src="/images/leetcode1.png" alt="">
+                        <img src="./images/leetcode1.png" alt="">
                     </div>
                 </div>
             </div>
@@ -138,10 +138,10 @@
                     <div class="about_det">
                         <div class="about_det_icon">
                             <div class="about_icon">
-                                <img src="/images/html.png" alt="">
+                                <img src="./images/html.png" alt="">
                             </div>
                             <div class="about_icon">
-                                <img src="/images/react.png" alt="">
+                                <img src="./images/react.png" alt="">
                             </div>
                         </div>
                         <div class="value">90%</div>
