--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
     <!-- Head -->
     <div class="head">
         <div class="shape1">
-            <img src="/images/line-1.png" alt="">
+            <img src="./images/line-1.png" alt="">
         </div>
         <div class="shape2">
-            <img src="/images/line-2.png" alt="">
+            <img src="./images/line-2.png" alt="">
         </div>
         <div class="shape3"></div>
         <div class="shape4"></div>
@@ -80,10 +80,10 @@
             </button>
         </div>
         <div class="image">
-            <img src="/images/img (1).jpg" alt="">
-            <img src="/images/github1.png" alt="" class="element elem1">
-            <img src="/images/leetcode1.png" alt="" class="element elem2">
-            <img src="/images/linkedin1.png" alt="" class="element elem3">
+            <img src="./images/img (1).jpg" alt="">
+            <img src="./images/github1.png" alt="" class="element elem1">
+            <img src="./images/leetcode1.png" alt="" class="element elem2">
+            <img src="./images/linkedin1.png" alt="" class="element elem3">
             <div class="det_box">
                 <i class="ri-shield-check-line"></i>
                 <div class="det_box_info">
@@ -155,7 +155,7 @@
                     <div class="about_det">
                         <div class="about_det_icon">
                             <div class="about_icon">
-                                <img src="/images/python.png" alt="">
+                                <img src="./images/python.png" alt="">
                             </div>
                         </div>
                         <div class="value">80%</div>
@@ -169,7 +169,7 @@
                     <div class="about_det">
                         <div class="about_det_icon">
                             <div class="about_icon">
-                                <img src="/images/cyber.png" alt="">
+                                <img src="./images/cyber.png" alt="">
                             </div>
                         </div>
                         <div class="value">70%</div>
@@ -198,7 +198,7 @@
             <div class="shape8"></div>
             <div class="shape9"></div>
             <div class="edu_container left">
-                <img src="/images/edu.png" alt="">
+                <img src="./images/edu.png" alt="">
                 <div class="text-box">
                     <h2>SECONDARY EDUCATION</h2>
                     <small>YEAR : 2018</small>
@@ -210,7 +210,7 @@
                 </div>
             </div>
             <div class="edu_container right">
-                <img src="/images/edu.png" alt="">
+                <img src="./images/edu.png" alt="">
                 <div class="text-box">
                     <h2>HIGHER SECONDARY EDUCATION</h2>
                     <small>YEAR : 2018 - 2020</small><br>
@@ -223,7 +223,7 @@
                 </div>
             </div>
             <div class="edu_container left">
-                <img src="/images/edu.png" alt="">
+                <img src="./images/edu.png" alt="">
                 <div class="text-box">
                     <h2>DIPLOMA DEGREE</h2>
                     <small>YEAR : 2020 - 2022</small><br>
@@ -236,7 +236,7 @@
                 </div>
             </div>
             <div class="edu_container right">
-                <img src="/images/edu.png" alt="">
+                <img src="./images/edu.png" alt="">
                 <div class="text-box">
                     <h2>B.TECH (ENGINEERING DEGREE)</h2>
                     <small>YEAR : 2023 - 2026</small><br>
@@ -255,7 +255,7 @@
             <div class="shape8"></div>
             <div class="shape9"></div>
             <div class="edu_container left">
-                <img src="/images/edu.png" alt="">
+                <img src="./images/edu.png" alt="">
                 <div class="text-box">
                     <h2>UI/UX Designer</h2>
                     <small>YEAR : 2023</small>
@@ -267,7 +267,7 @@
                 </div>
             </div>
             <div class="edu_container right">
-                <img src="/images/edu.png" alt="">
+                <img src="./images/edu.png" alt="">
                 <div class="text-box">
                     <h2>Full-Stack Development</h2>
                     <small>YEAR : 2024</small><br>
@@ -279,7 +279,7 @@
                 </div>
             </div>
             <div class="edu_container left">
-                <img src="/images/edu.png" alt="">
+                <img src="./images/edu.png" alt="">
                 <div class="text-box">
                     <h2>Backend Development (django)</h2>
                     <small>YEAR : 2024</small><br>
@@ -302,7 +302,7 @@
                 <!-- certificate 1 -->
                 <li class="certificate-item swiper-slide">
                     <div href="" class="certificate-link">
-                        <img src="/images/certificates/dsa.jpg" alt="" class="certificate-image">
+                        <img src="./images/certificates/dsa.jpg" alt="" class="certificate-image">
                         <p class="badge"> D S A </p>
                         <h2 class="certificate-title">Certificate provided by LearnTube.
                         </h2>
@@ -312,7 +312,7 @@
                 <!-- certificate 2 -->
                 <li class="certificate-item swiper-slide">
                     <div href="" class="certificate-link">
-                        <img src="/images/certificates/sqladvance.jpg" alt="" class="certificate-image">
+                        <img src="./images/certificates/sqladvance.jpg" alt="" class="certificate-image">
                         <p class="badge"> SQL ADVANCED </p>
                         <h2 class="certificate-title">Certificate provided by LearnTube.
                         </h2>
@@ -322,7 +322,7 @@
                 <!-- certificate 3 -->
                 <li class="certificate-item swiper-slide">
                     <div href="" class="certificate-link">
-                        <img src="/images/certificates/figma.jpg" alt="" class="certificate-image">
+                        <img src="./images/certificates/figma.jpg" alt="" class="certificate-image">
                         <p class="badge"> FIGMA </p>
                         <h2 class="certificate-title">Certificate provided by LearnTube.
                         </h2>
@@ -332,7 +332,7 @@
                 <!-- certificate 4 -->
                 <li class="certificate-item swiper-slide">
                     <div href="" class="certificate-link">
-                        <img src="/images/certificates/css.jpeg" alt="" class="certificate-image">
+                        <img src="./images/certificates/css.jpeg" alt="" class="certificate-image">
                         <p class="badge"> C S S </p>
                         <h2 class="certificate-title">Certificate provided by Code-Karo.
                         </h2>
@@ -342,7 +342,7 @@
                 <!-- certificate 5 -->
                 <li class="certificate-item swiper-slide">
                     <div href="" class="certificate-link">
-                        <img src="/images/certificates/mysql.jpg" alt="" class="certificate-image">
+                        <img src="./images/certificates/mysql.jpg" alt="" class="certificate-image">
                         <p class="badge"> BASIC MYSQL </p>
                         <h2 class="certificate-title">Certificate provided by LearnTube.
                         </h2>
@@ -352,7 +352,7 @@
                 <!-- certificate 6 -->
                 <li class="certificate-item swiper-slide">
                     <div href="" class="certificate-link">
-                        <img src="/images/certificates/datascience.png" alt="" class="certificate-image">
+                        <img src="./images/certificates/datascience.png" alt="" class="certificate-image">
                         <p class="badge"> DATASCIENCE </p>
                         <h2 class="certificate-title">Certificate provided by BOARD.
                         </h2>
@@ -362,7 +362,7 @@
                 <!-- certificate 7 -->
                 <li class="certificate-item swiper-slide">
                     <div href="" class="certificate-link">
-                        <img src="/images/certificates/react.jpg" alt="" class="certificate-image">
+                        <img src="./images/certificates/react.jpg" alt="" class="certificate-image">
                         <p class="badge"> REACT JS </p>
                         <h2 class="certificate-title">Certificate provided by LearnTube.
                         </h2>
@@ -372,7 +372,7 @@
                 <!-- certificate 8 -->
                 <li class="certificate-item swiper-slide">
                     <div href="" class="certificate-link">
-                        <img src="/images/certificates/js.jpeg" alt="" class="certificate-image">
+                        <img src="./images/certificates/js.jpeg" alt="" class="certificate-image">
                         <p class="badge"> JAVA SCRIPT </p>
                         <h2 class="certificate-title">Certificate provided by LETS-UPGRADE.
                         </h2>
@@ -382,7 +382,7 @@
                 <!-- certificate 9 -->
                 <li class="certificate-item swiper-slide">
                     <div href="" class="certificate-link">
-                        <img src="/images/certificates/pg.jpg" alt="" class="certificate-image">
+                        <img src="./images/certificates/pg.jpg" alt="" class="certificate-image">
                         <p class="badge"> PHOTOGRAPHY </p>
                         <h2 class="certificate-title">Certificate provided by LearnTube.
                         </h2>
@@ -392,7 +392,7 @@
                 <!-- certificate 10 -->
                 <li class="certificate-item swiper-slide">
                     <div href="" class="certificate-link">
-                        <img src="/images/certificates/c++.png" alt="" class="certificate-image">
+                        <img src="./images/certificates/c++.png" alt="" class="certificate-image">
                         <p class="badge"> C + + </p>
                         <h2 class="certificate-title">Certificate provided by GREAT LEARNING.
                         </h2>
@@ -424,7 +424,7 @@
             <!-- project 1 -->
             <div class="project_card mix category-a category-d">
                 <div class="project_img">
-                    <img src="/images/projects_images/protfolio.png" alt="">
+                    <img src="./images/projects_images/protfolio.png" alt="">
                 </div>
                 <div class="project_info">
                     <h2>Protfolio Website.</h2>
@@ -437,7 +437,7 @@
             <!-- project 2 -->
             <div class="project_card mix category-a ">
                 <div class="project_img">
-                    <img src="/images/projects_images/carkharido.png" alt="">
+                    <img src="./images/projects_images/carkharido.png" alt="">
                 </div>
                 <div class="project_info">
                     <h2>Car Kharido</h2>
@@ -450,7 +450,7 @@
             <!-- project 3 -->
             <div class="project_card mix category-c category-d">
                 <div class="project_img">
-                    <img src="/images/projects_images/movieapp.png" alt="">
+                    <img src="./images/projects_images/movieapp.png" alt="">
                 </div>
                 <div class="project_info">
                     <h2>Mobile App Design.</h2>
@@ -463,7 +463,7 @@
             <!-- project 4 -->
             <div class="project_card mix category-b">
                 <div class="project_img">
-                    <img src="/images/projects_images/java.png" alt="">
+                    <img src="./images/projects_images/java.png" alt="">
                 </div>
                 <div class="project_info">
                     <h2>Online Exam Portal.</h2>
@@ -476,7 +476,7 @@
             <!-- project 5 -->
             <div class="project_card mix category-b">
                 <div class="project_img">
-                    <img src="/images/projects_images/c++.png" alt="">
+                    <img src="./images/projects_images/c++.png" alt="">
                 </div>
                 <div class="project_info">
                     <h2>Bank & ATM.</h2>
@@ -489,7 +489,7 @@
             <!-- project 6 -->
             <div class="project_card mix category-a">
                 <div class="project_img">
-                    <img src="/images/projects_images/eduincom.png" alt="">
+                    <img src="./images/projects_images/eduincom.png" alt="">
                 </div>
                 <div class="project_info">
                     <h2>Edu in Computer.</h2>
@@ -509,7 +509,7 @@
         <div class="advantage_skill">
             <div class="skill_box">
                 <h1 class="skill_name">PYTHON</h1>
-                <img id="skill_img" src="/images/python.png" alt="" class="random-multicolor-shadow">
+                <img id="skill_img" src="./images/python.png" alt="" class="random-multicolor-shadow">
                 <!-- <p>Frontend</p> -->
             </div>
             <div class="skill_small_box">
@@ -526,27 +526,27 @@
             </p>
             <div class="advantage_cards">
                 <div class="advantage_card">
-                    <img src="/images/html.png" alt="">
+                    <img src="./images/html.png" alt="">
                     <p>HTML</p>
                 </div>
                 <div class="advantage_card">
-                    <img src="/images/css.png" alt="">
+                    <img src="./images/css.png" alt="">
                     <p>CSS</p>
                 </div>
                 <div class="advantage_card">
-                    <img src="/images/js.png" alt="">
+                    <img src="./images/js.png" alt="">
                     <p>JAVA SCRIPT</p>
                 </div>
                 <div class="advantage_card">
-                    <img src="/images/figma.png" alt="">
+                    <img src="./images/figma.png" alt="">
                     <p>FIGMA</p>
                 </div>
                 <div class="advantage_card">
-                    <img src="/images/java.png" alt="">
+                    <img src="./images/java.png" alt="">
                     <p>JAVA</p>
                 </div>
                 <div class="advantage_card">
-                    <img src="/images/django.png" alt="">
+                    <img src="./images/django.png" alt="">
                     <p>DJANGO</p>
                 </div>
             </div>
@@ -558,10 +558,10 @@
             </div> -->
         </div>
         <div class="shape10">
-            <img src="/images/shape1.png" alt="">
+            <img src="./images/shape1.png" alt="">
         </div>
         <div class="shape11">
-            <img src="/images/shape2.png" alt="">
+            <img src="./images/shape2.png" alt="">
         </div>
         <div class="shape12"></div>
         <div class="shape13"></div>
@@ -578,7 +578,7 @@
             <div class="work_box">
                 <h2>2023</h2>
                 <div class="work_box_img">
-                    <img src="/images/free.png" alt="">
+                    <img src="./images/free.png" alt="">
                 </div>
                 <div class="work_name">
                     <h2>UI/UX Designer (Figma)</h2>
@@ -592,7 +592,7 @@
             <div class="work_box">
                 <h2>2024</h2>
                 <div class="work_box_img">
-                    <img src="/images/ps.jpg" alt="">
+                    <img src="./images/ps.jpg" alt="">
                 </div>
                 <div class="work_name">
                     <h2>Full-Stack Web Development</h2>
@@ -606,7 +606,7 @@
             <div class="work_box">
                 <h2>2024</h2>
                 <div class="work_box_img">
-                    <img src="/images/dj.png" alt="">
+                    <img src="./images/dj.png" alt="">
                 </div>
                 <div class="work_name">
                     <h2>Backend Development (django)</h2>
@@ -620,7 +620,7 @@
             <!-- <div class="work_box">
                 <h2>2024</h2>
                 <div class="work_box_img">
-                    <img src="/images/img (1).jpg" alt="">
+                    <img src="./images/img (1).jpg" alt="">
                 </div>
                 <div class="work_name">
                     <h2>IOT</h2>
