--- a/index.html
+++ b/index.html
@@ -475,16 +475,18 @@
                 </div>
             </div>
             <!-- project 3 -->
-            <div class="project_card mix category-c">
+            <div class="project_card mix category-a">
                 <div class="project_img">
-                    <img src="/images/projects_images/movieapp.png" alt="">
+                    <img src="/images/projects_images/fast_Chat_image.jpg" alt="">
                 </div>
                 <div class="project_info">
-                    <h2>Mobile App Design.</h2>
-                    <h5>Figma | Graphics | Design</h5>
-                    <p>A movie ticket purchasing app designed in Figma, featuring a sleek UI/UX for an intuitive
-                        frontend experience.<br><span>Read More..</span></p>
-                    <!-- <a href=""><button class="view_project material-symbols-sharp">captive_portal</button></a> -->
+                    <h2>Fast-Chat. <a href="https://fast-chat-bn45.onrender.com/">
+                            <button class="view_project material-symbols-sharp">captive_portal</button>
+                        </a>
+                    </h2>
+                    <h5>Frontend | Mernstack | Backend | Socket.io</h5>
+                    <p>Fast-Chat is a real-time messaging platform using Socket.io for instant communication. Deployed on Render to support real-time 
+                        web service infrastructure. . . . </p>
                 </div>
             </div>
             <!-- project 4 -->
@@ -501,15 +503,15 @@
                 </div>
             </div>
             <!-- project 5 -->
-            <div class="project_card mix category-a ">
+            <div class="project_card mix category-c">
                 <div class="project_img">
-                    <img src="/images/projects_images/carkharido.png" alt="">
+                    <img src="/images/projects_images/movieapp.png" alt="">
                 </div>
                 <div class="project_info">
-                    <h2>Car Kharido</h2>
-                    <h5>Frontend | Web </h5>
-                    <p>A super car dealership website with a stunning frontend design built using only HTML and
-                        CSS.<br><span>Read More..</span></p>
+                    <h2>Mobile App Design.</h2>
+                    <h5>Figma | Graphics | Design</h5>
+                    <p>A movie ticket purchasing app designed in Figma, featuring a sleek UI/UX for an intuitive
+                        frontend experience.<br><span>Read More..</span></p>
                     <!-- <a href=""><button class="view_project material-symbols-sharp">captive_portal</button></a> -->
                 </div>
             </div>
