--- a/index.html
+++ b/index.html
@@ -360,8 +360,8 @@
                 <li class="certificate-item swiper-slide">
                     <div href="" class="certificate-link">
                         <img loading="lazy" src="/images/certificates/hackathon1.jpg" alt="" class="certificate-image">
-                        <p class="badge"> Hardware Hackathon </p>
-                        <h2 class="certificate-title">Certificate provided by Asansol Engineering College.
+                        <p class="badge"> Hackathon </p>
+                        <h2 class="certificate-title">Provided by Asansol Engineering College.
                         </h2>
                         <button class="certificate-btn material-symbols-sharp">arrow_forward</button>
                     </div>
@@ -443,162 +443,99 @@
         <div class="projects_btns">
             <button data-filter="all">All</button>
             <button data-filter=".category-a">Web</button>
-            <button data-filter=".category-b">Mobile App</button>
+            <button data-filter=".category-b">Apps</button>
             <button data-filter=".category-c">UI/UX</button>
         </div>
+
         <div class="projects_cards">
-            <!-- project 1 -->
+
             <div class="project_card mix category-a">
-                <div class="project_img">
-                    <img loading="lazy" src="/images/projects_images/portfolio.png" alt="">
-                </div>
+                <a href="https://suvrodip-chakroborty.vercel.app/" target="_blank" class="img-link">
+                    <div class="project_img">
+                        <img loading="lazy" src="/images/projects_images/portfolio.png" alt="Portfolio">
+                    </div>
+                </a>
                 <div class="project_info">
-                    <h2>Protfolio Website.
-                        <a href="https://suvrodip-chakroborty.vercel.app/">
-                            <button class="view_project material-symbols-sharp">captive_portal</button>
-                        </a>
-                    </h2>
+                    <h2>Protfolio Website.</h2>
                     <h5>Frontend | Portfolio | Fully Responsive</h5>
-                    <p>Responsive portfolio website built with HTML, CSS, JavaScript, and Swiper for seamless
-                        viewing across all devices. <br><span>Read More..</span></p>
+                    <p>Responsive portfolio website built with HTML, CSS, JavaScript, and Swiper...</p>
+                </div>
+            </div>
 
-                </div>
-            </div>
-            <!-- project 2 -->
             <div class="project_card mix category-a">
-                <div class="project_img">
-                    <img loading="lazy" src="/images/projects_images/E-bazar.png" alt="">
-                </div>
+                <a href="https://e-bazar-teec.vercel.app/" target="_blank" class="img-link">
+                    <div class="project_img">
+                        <img loading="lazy" src="/images/projects_images/E-bazar.png" alt="E-Bazar">
+                    </div>
+                </a>
                 <div class="project_info">
-                    <h2>E-Bazar. <a href="https://e-bazar-teec.vercel.app/">
-                            <button class="view_project material-symbols-sharp">captive_portal</button>
-                        </a>
-                    </h2>
-                    <h5>Frontend | Mernstack | Backend | Payments</h5>
-                    <p>E-Bazar is a full-featured e-commerce platform built with React.js, Tailwind CSS, Node.js, and
-                        Cloudinary. It offers real-time paymentsfor a
-                        smooth shopping experience . . . </p>
+                    <h2>E-Bazar.</h2>
+                    <h5>Frontend | Mernstack | Backend</h5>
+                    <p>E-Bazar is a full-featured e-commerce platform built with React.js...</p>
                 </div>
             </div>
-            <!-- project 3 -->
+
+            <div class="project_card mix category-b">
+                <a href="https://splitpay-pro.vercel.app/" target="_blank" class="img-link">
+                    <div class="project_img">
+                        <img loading="lazy" src="/images/projects_images/splitpay.jpg" alt="SplitPay">
+                    </div>
+                </a>
+                <div class="project_info">
+                    <h2>SplitPay.</h2>
+                    <h5>MERN Stack | Tailwind CSS | JWT | OTP Verification</h5>
+                    <p>A smart expense splitting web + android app withminimize transactions, secure auth, and
+                        guest mode calculator.</p>
+                </div>
+            </div>
+
             <div class="project_card mix category-a">
-                <div class="project_img">
-                    <img loading="lazy" src="/images/projects_images/fast_Chat_image.jpg" alt="">
-                </div>
+                <a href="https://blood-finder-zeta.vercel.app/" target="_blank" class="img-link">
+                    <div class="project_img">
+                        <img loading="lazy" src="/images/projects_images/blood.png" alt="Blood Finder">
+                    </div>
+                </a>
                 <div class="project_info">
-                    <h2>Fast-Chat.
-                        <a href="https://fast-chat-bn45.onrender.com/">
-                            <button class="view_project material-symbols-sharp">captive_portal</button>
-                        </a>
-                    </h2>
-                    <h5>Frontend | Mernstack | Backend | Socket.io</h5>
-                    <p>Fast-Chat is a real-time messaging platform using Socket.io for instant communication. Deployed
-                        on Render to support real-time
-                        web service infrastructure. . . . </p>
+                    <h2>Blood Finder.</h2>
+                    <h5>Frontend | Backend | OTP Verification</h5>
+                    <p>A blood donation website here you can donate blood...</p>
                 </div>
             </div>
-            <!-- project 4 -->
-            <div class="project_card mix category-a">
-                <div class="project_img">
-                    <img loading="lazy" src="/images/projects_images/blood.png" alt="">
-                </div>
-                <div class="project_info">
-                    <h2>Blood Finder.
-                        <a href="https://blood-finder-zeta.vercel.app/">
-                            <button class="view_project material-symbols-sharp">captive_portal</button>
-                        </a>
-                    </h2>
-                    <h5>Frontend | Backend | Mernstack | OTP Verification</h5>
-                    <p> A blood donation website here you can donate blood, test your blood and find blood. It's
-                        built using Mern-Stack <br><span>Read More..</span></p>
-                </div>
-            </div>
-            <!-- project 5 -->
+
             <div class="project_card mix category-c">
-                <div class="project_img">
-                    <img loading="lazy" src="/images/projects_images/stock.png" alt="">
-                </div>
+                <a href="https://stock-watch-list.vercel.app/" target="_blank" class="img-link">
+                    <div class="project_img">
+                        <img loading="lazy" src="/images/projects_images/stock.png" alt="Stock Watch">
+                    </div>
+                </a>
                 <div class="project_info">
-                    <h2>Stock Watchlist Lite.
-                        <a href="https://stock-watch-list.vercel.app/">
-                            <button class="view_project material-symbols-sharp">captive_portal</button>
-                        </a>
-                    </h2>
-                    <h5>Frontend | Web | Responsive | React.js</h5>
-                    <p>A responsive stock watchlist website built using React.js and Tailwind CSS.<br><span>Read
-                            More..</span></p>
+                    <h2>Stock Watchlist Lite.</h2>
+                    <h5>Frontend | React.js</h5>
+                    <p>A responsive stock watchlist website built using React.js...</p>
                 </div>
             </div>
-            <!-- project 6 -->
-            <div class="project_card mix category-a">
-                <div class="project_img">
-                    <img loading="lazy" src="/images/projects_images/dashboard.png" alt="">
-                </div>
-                <div class="project_info">
-                    <h2>Data Dashboard.
-                        <a href="https://data-dashboard-alpha.vercel.app/">
-                            <button class="view_project material-symbols-sharp">captive_portal</button>
-                        </a>
-                    </h2>
-                    <h5>Frontend | Backend | Mernstack | AI Integration</h5>
-                    <p>A responsive dashboard for data visualization and AI analysis Website, Here you can Upload your
-                        data files and get AI generated reports..</p>
 
-                </div>
-            </div>
-            <!-- project 7 -->
             <div class="project_card mix category-a">
-                <div class="project_img">
-                    <img loading="lazy" src="/images/projects_images/edusparl.png" alt="">
-                </div>
+                <a href="https://data-dashboard-alpha.vercel.app/" target="_blank" class="img-link">
+                    <div class="project_img">
+                        <img loading="lazy" src="/images/projects_images/dashboard.png" alt="Dashboard">
+                    </div>
+                </a>
                 <div class="project_info">
-                    <h2>Edu-Spark.
-                        <a href="https://eduspark-one.vercel.app/">
-                            <button class="view_project material-symbols-sharp">captive_portal</button>
-                        </a>
-                    </h2>
-                    <h5>Frontend | Backend | Mernstack</h5>
-                    <p>A responsive educational website, Here you can learn Coding Related anything you want, Also Here
-                        have a Exam section Student Management Section...</p>
-
-                </div>
-            </div>
-            <!-- project 8 -->
-            <div class="project_card mix category-a">
-                <div class="project_img">
-                    <img loading="lazy" src="/images/projects_images/sales.png" alt="">
-                </div>
-                <div class="project_info">
-                    <h2>Sales Management.
-                        <a href="https://sales-management-topaz-kappa.vercel.app/">
-                            <button class="view_project material-symbols-sharp">captive_portal</button>
-                        </a>
-                    </h2>
-                    <h5>Frontend | Backend | Mernstack | Socket.io</h5>
-                    <p>A responsive sales management website, Here Manager can manage their sales and employees. It's
-                        built using Mern-Stack and Socket.io for real-time communication...</p>
-
-                </div>
-            </div>
-            <!-- project 9 -->
-            <div class="project_card mix category-a">
-                <div class="project_img">
-                    <img loading="lazy" src="/images/projects_images/team.png" alt="">
-                </div>
-                <div class="project_info">
-                    <h2>Skill Matrix.
-                        <a href="https://skill-matrix-pro.vercel.app/">
-                            <button class="view_project material-symbols-sharp">captive_portal</button>
-                        </a>
-                    </h2>
-                    <h5>Frontend | Backend | Mernstack | OTP Verification</h5>
-                    <p>A responsive skill matrix website, Here you can Upload your Projects and AI Select and Find Your
-                        team members based on your skills... </p>
-
+                    <h2>Data Dashboard.</h2>
+                    <h5>Frontend | AI Integration</h5>
+                    <p>A responsive dashboard for data visualization and AI analysis...</p>
                 </div>
             </div>
 
         </div>
+
+        <div class="view_more_container">
+            <a href="all-projects.html" class="view_more_btn">
+                View More Projects <span class="material-symbols-sharp">arrow_forward</span>
+            </a>
+        </div>
+
     </section>
 
     <!-- Skills -->
