--- a/index.html
+++ b/index.html
@@ -297,6 +297,18 @@
                     <span class="left-container-arrow"></span>
                 </div>
             </div>
+            <div class="edu_container right">
+                <img loading="lazy" src="/images/edu.png" alt="">
+                <div class="text-box">
+                    <h2>IT Associate Engineer</h2>
+                    <small>YEAR : 2026</small><br>
+                    <p>
+                        Current Job<br>
+                        Kredent Group
+                    </p>
+                    <span class="right-container-arrow"></span>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -605,7 +617,7 @@
             backend development with Django through hands-on internships and freelance work.</p>
         <div class="work_box_container">
             <!-- work box 1 -->
-            <div class="work_box">
+            <!-- <div class="work_box">
                 <h2>2023</h2>
                 <div class="work_box_img">
                     <img loading="lazy" src="/images/free.png" alt="">
@@ -617,7 +629,7 @@
                 <div class="work_det">
                     <p>Freelancer.in</p>
                 </div>
-            </div>
+            </div> -->
             <!-- work box 2 -->
             <div class="work_box">
                 <h2>2024</h2>
@@ -647,19 +659,19 @@
                 </div>
             </div>
             <!-- work box 4 -->
-            <!-- <div class="work_box">
-                <h2>2024</h2>
+            <div class="work_box">
+                <h2>2026</h2>
                 <div class="work_box_img">
-                    <img loading="lazy" src="/images/img (1).jpg" alt="">
+                    <img loading="lazy" src="/images/kredent.jpg" alt="">
                 </div>
                 <div class="work_name">
-                    <h2>IOT</h2>
-                    <p>1 month Experience</p>
+                    <h2>IT Associate Engineer</h2>
+                    <p>Current Job</p>
                 </div>
                 <div class="work_det">
-                    <p>Jis university</p>
+                    <p>Kredent Group</p>
                 </div>
-            </div> -->
+            </div>
 
         </div>
     </section>
